Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/Historial_Promocion__c.object-meta.xml
<CustomObject>
    <label>Historial Promoción</label>
    <nameField>
        <label>Nombre de Historial Promoción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historiales Promociones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>