Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Bloque__c.field-meta.xml
<CustomField>
    <fullName>Bloque__c</fullName>
    <label>Bloque</label>
    <length>5</length>
    <type>Text</type>
</CustomField>