Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/CI_Promocion__c.field-meta.xml
<CustomField>
    <fullName>CI_Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Historiales Promociones</relationshipLabel>
    <relationshipName>Historiales_Promociones_del</relationshipName>
    <type>Lookup</type>
</CustomField>