Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Cod_Promo__c.field-meta.xml
<CustomField>
    <fullName>Cod_Promo__c</fullName>
    <formula>VALUE( Codigo_Promocion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod. Promo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>