Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Codigo_Manzana__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Manzana__c</fullName>
    <label>Código Manzana</label>
    <length>5</length>
    <type>Text</type>
</CustomField>