Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Codigo_Modelo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Modelo__c</fullName>
    <label>Código Modelo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>