Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Codigo_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Promocion__c</fullName>
    <label>Código Promoción</label>
    <length>5</length>
    <type>Text</type>
</CustomField>