Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Codigo_Solar__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Solar__c</fullName>
    <label>Código Solar</label>
    <length>5</length>
    <type>Text</type>
</CustomField>