Inmob-Salesforce/force-app/main/default/objects/Historial_Promocion__c/fields/Valor_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Valor_Promocion__c</fullName>
    <label>Valor Promoción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>